Latest build deployed.

--- a/.mapping.json
+++ b/.mapping.json
@@ -1,1 +1,1 @@
-{"source/main.ptx": ["calculus-scbi"], "source/frontmatter.ptx": ["frontmatter", "front-colophon"], "source/calc1/ch-welcome.ptx": ["ch-welcome-intro", "sec-welcome-what-is-calculus", "sec-welcome-differentials"], "source/backmatter.ptx": ["backmatter"]}
+{"source/main.ptx": ["calculus-scbi"], "source/frontmatter.ptx": ["frontmatter", "front-colophon"], "source/calc1/ch-welcome.ptx": ["ch-welcome-intro", "sec-welcome-what-is-calculus", "sec-welcome-differentials", "sec-welcome-reading-questions"], "source/backmatter.ptx": ["backmatter"]}
