Latest build deployed.

--- a/.mapping.json
+++ b/.mapping.json
@@ -1,1 +1,1 @@
-{"source/main.ptx": ["calculus-scbi"], "source/frontmatter.ptx": ["frontmatter", "front-colophon"], "source/calc1/ch-welcome.ptx": ["welcome", "welcome-sec-what-is-calculus", "welcome-sec-differentials", "welcome-reading-questions"], "source/backmatter.ptx": ["backmatter"]}
+{"source/main.ptx": ["calculus-scbi"], "source/frontmatter.ptx": ["frontmatter", "front-colophon"], "source/calc1/ch-welcome.ptx": ["welcome", "welcome-sec-what-is-calculus", "welcome-reading-questions"], "source/backmatter.ptx": ["backmatter"]}
